crates/aranya-policy-lang/tests/data/invalid_this/fact_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
1 | fact this[]=>{}
  |      ^^^^ this
